--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ layoutDir    = "layouts"
 publishDir   = "public"
 
 buildDrafts  = false
-buildFuture  = false
+buildFuture  = true
 buildExpired = false
 canonifyURLs = true
 
@@ -36,7 +36,7 @@ disableHugoGeneratorInject = false
   posts = "/posts/:year/:title/"
 
 [author]
-  name = "Juho Jauhiainen"
+  name = "Helsec"
 
 [blackfriday]
   hrefTargetBlank = true
@@ -177,6 +177,12 @@ disableHugoGeneratorInject = false
     parent     = "about"
     url        = "about/coe/"
     weight     = "5"
+
+  [[menu.main]]
+    identifier = "gallery"
+    name       = "Photo gallery"
+    url        = "gallery/"
+    weight     = "9"
 
 # FAQ
 
